# flash

./: .gitignore  BETA_RELEASE_NOTES.MD  FEATURES.md  LICENSE  MONGODB_STUDIO.md  Makefile  README.md  RELEASE_NOTES.md  STUDIO_IMPLEMENTATION.md  context  go.mod  go.sum  graft.config.json  hi.json  main.go  test-demo.sh  test_mongo.go
.github/workflows/: beta-release.yml  build-binaries.yml  ci.yml  docs.yml  npmrelease.yml  pypi-release.yml  release.yml  temp-workflow.txt  temp-workflow.yml  testcase.yml
cmd/: add_plugin.go  apply.go  backup.go  base.go  base_dev.go  branch.go  deploy.go  down.go  export.go  gen.go  init.go  migrate.go  plugin_executor_all.go  plugin_executor_studio.go  plugin_executors.go  plugins.go  pull.go  raw.go  remove_plugin.go  reset.go  restore.go  root.go  root_dev.go  seed.go  sqlc-migrate.go  sqlc_migrate.go  status.go  studio.go  update.go
db/: schema.sql
db/migrations/: 20251108020822_add_column_'test'_to_table_'flash_seeds'.sql  20251108020936_add_column_'name_uu'_to_table_'flash_seeds'.sql
docs/: .gitignore  BETA_WORKFLOWS.md  CONTRIBUTING.md  HOW_IT_WORKS.md  NPM_PUBLISH.md  PLUGIN_SYSTEM.md  TECHNOLOGY_STACK.md  USAGE_GO.md  USAGE_PYTHON.md  USAGE_TYPESCRIPT.md  beta-workflows.md  contributing.md  getting-started.md  index.md  package-lock.json  package.json  releases.md
docs/.vitepress/: config.mts
docs/advanced/: how-it-works.md  performance.md  plugins.md  technology-stack.md
docs/concepts/: branching.md  code-generation.md  export.md  migrations.md  mongodb-studio.md  redis-studio.md  schema.md  seeding.md  studio.md
docs/databases/: mongodb.md  mysql.md  postgresql.md  sqlite.md
docs/guides/: go.md  python.md  typescript.md
docs/introduction/: what-is-flash.md  why-flash.md
docs/reference/: cli.md  configuration.md  query-api.md  schema.md
example/: go.mod  graft.config.json  main.go  sqlc.yml
example/db/: database.go
example/go/: flash.config.json  main.go
example/js/: .gitignore  benchmark.ts  drizzle-test.ts  graft-test.ts  graft.config.json  no.ts  package.json  prisma-test.ts
example/python/: flash.config.json  main.py  requirements.txt
example/sqlite_test/: database.db  database_branch_feature.db  feature  flash.config.json  main
example/ts/: README.md  index.ts  package.json
examples/: docker-compose.yml  example-migration.sql  sqlc.yaml
examples/queries/: users.sql
internal/backup/: backup.go
internal/branch/: README.md  diff.go  manager.go  metadata.go
internal/config/: config.go  config_test.go
internal/database/: adapter.go  factory.go  mysql.go  postgres.go  sqlite.go
internal/db/: connection.go
internal/export/: export.go
internal/gencommon/: cache.go  pool.go  utils.go
internal/gogen/: generator.go  incremental.go
internal/jsgen/: generator.go  incremental.go  (+1 more)
migrations/: 20250629211404_create_users_table.sql  20250629211703_create_test_table.sql
npm/: README.md  index.js  package.json
python/: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  README_PYPI.md  pyproject.toml  setup.py
python/flashorm/: __init__.py  cli.py  install.py
python/graft_orm/: __init__.py  cli.py
template/: init.go
test/: db-helper.sh  github-workflow-test.sh  main.go  schema1.sql  schema2.sql  schema_compare  schema_compare.sh  test-helper.go  test-studio.sh
testss/: README.md  package.json
(+236 files in other folders)
