[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graft-orm"
version = "1.0.0"
description = "A powerful, database-agnostic ORM with multi-database support and type-safe code generation"
readme = "../README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Rana718"}]
keywords = ["orm", "database", "migration", "postgresql", "mysql", "sqlite", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Lumos-Labs-HQ/graft"
Repository = "https://github.com/Lumos-Labs-HQ/graft"
Issues = "https://github.com/Lumos-Labs-HQ/graft/issues"

[project.scripts]
graft = "graft_orm.cli:main"
